feat: ブロック単位化(excel_extend.py:ExtendHandler)の追加

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+testcode.py
+temp_code.py
+
 # Created by https://www.toptal.com/developers/gitignore/api/windows,python,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,python,visualstudiocode
 
